fixed flicker

--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -22,3 +22,6 @@
   color: white
   &:hover
     background-color: #7a7a99
+
+[ng\:cloak], [data-ng-cloak], .data-ng-cloak
+  display: none !important
